--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to Lux Aesthetics, your premier destination for beauty and aesthetics services in Mannheim and Eberbach, Germany. Experience the art of beauty with our specialized treatments."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -15,16 +15,44 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap"
+      rel="stylesheet"
+    />
+    <meta
+      name="keywords"
+      content="beauty services, aesthetics treatments, skincare, facial treatments, body contouring, anti-aging, cosmetic enhancements, Mannheim beauty, Eberbach aesthetics, luxury beauty, spa services, beauty clinic, wellness treatments, skin rejuvenation, professional skincare"
+    />
+    <meta name="author" content="Lux Aesthetics" />
+    <title>Lux Aesthetics</title>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph meta tags (for better sharing on social media) -->
+    <meta property="og:title" content="Lux Aesthetics" />
+    <meta
+      property="og:description"
+      content="Welcome to Lux Aesthetics, your premier destination for beauty and aesthetics services in Mannheim and Eberbach, Germany. Experience the art of beauty with our specialized treatments."
+    />
+    <meta property="og:image" content="%PUBLIC_URL%/favicon.png" />
+    <meta
+      property="og:url"
+      content="https://lux-aesthetics.i-hausarztxpraxis.de"
+    />
+    <meta name="twitter:card" content="%PUBLIC_URL%/favicon.png" />
+    <meta name="twitter:title" content="Lux Aesthetics" />
+    <meta
+      name="twitter:description"
+      content="Welcome to Lux Aesthetics, your premier destination for beauty and aesthetics services in Mannheim and Eberbach, Germany. Experience the art of beauty with our specialized treatments."
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/favicon.png" />
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
