--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Welcome to Lux Aesthetics, your premier destination for beauty and aesthetics services in Mannheim and Eberbach, Germany. Experience the art of beauty with our specialized treatments."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -34,18 +34,18 @@
       property="og:description"
       content="Welcome to Lux Aesthetics, your premier destination for beauty and aesthetics services in Mannheim and Eberbach, Germany. Experience the art of beauty with our specialized treatments."
     />
-    <meta property="og:image" content="%PUBLIC_URL%/favicon.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo512.png" />
     <meta
       property="og:url"
       content="https://lux-aesthetics.i-hausarztxpraxis.de"
     />
-    <meta name="twitter:card" content="%PUBLIC_URL%/favicon.png" />
+    <meta name="twitter:card" content="%PUBLIC_URL%/logo512.png" />
     <meta name="twitter:title" content="Lux Aesthetics" />
     <meta
       name="twitter:description"
       content="Welcome to Lux Aesthetics, your premier destination for beauty and aesthetics services in Mannheim and Eberbach, Germany. Experience the art of beauty with our specialized treatments."
     />
-    <meta name="twitter:image" content="%PUBLIC_URL%/favicon.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/logo512.png" />
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
